RESOLVED FIXED 54914
[chromium] ChromePluginPrintContext::begin() fails to override superclass method
https://bugs.webkit.org/show_bug.cgi?id=54914
Summary [chromium] ChromePluginPrintContext::begin() fails to override superclass method
Nico Weber
Reported 2011-02-21 16:01:19 PST
/b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebKit/chromium/src/WebFrameImpl.cpp:361:18:error: 'WebKit::ChromePluginPrintContext::begin' hides overloaded virtual function [-Woverloaded-virtual] virtual void begin(float width) ^ /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebKit/chromium/src/WebFrameImpl.cpp:291:18: note: hidden overloaded virtual function 'WebKit::ChromePrintContext::begin' declared here virtual void begin(float width, float height) ^ The signature of the superclass method was changed in http://trac.webkit.org/changeset/71964 , but the subclass was not updated.
Attachments
Patch (1.26 KB, patch)
2011-02-21 16:04 PST, Nico Weber
no flags
Nico Weber
Comment 1 2011-02-21 16:04:30 PST
WebKit Commit Bot
Comment 2 2011-02-21 18:06:18 PST
The commit-queue encountered the following flaky tests while processing attachment 83234 [details]: animations/play-state-suspend.html bug 50959 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2011-02-21 18:08:29 PST
Comment on attachment 83234 [details] Patch Clearing flags on attachment: 83234 Committed r79276: <http://trac.webkit.org/changeset/79276>
WebKit Commit Bot
Comment 4 2011-02-21 18:08:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.