third_party/WebKit/Source/WebKit/chromium/src/WebFrameImpl.cpp
@@ -359,7 +359,7 @@ public:
     {
     }
 
-    virtual void begin(float width)
+    virtual void begin(float width, float height)
     {
     }
 
